# porcupine

./: .gitignore  ChangeLog.md  README.md  porcupine.cabal
app/: Main.hs
src/Control/Concurrent/Porcupine/: FreeSocketPort.hs  GenericServer.hs  Node.hs  Process.hs  SocketPort.hs  Utility.hs
src/Control/Concurrent/Porcupine/Private/: Types.hs
test/freeport0/: Main.hs
test/freeport1/: Main.hs
test/port0/: Main.hs
test/port1/: Main.hs
test/ring0/: Main.hs
test/ring1/: Main.hs
test/simple0/: Main.hs
test/simple1/: Main.hs
test/simple2/: Main.hs
test/simple3/: Main.hs
