name:           porcupine
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/porcupine#readme>
homepage:       https://github.com/tabemann/porcupine#readme
bug-reports:    https://github.com/tabemann/porcupine/issues
author:         Travis Bemann
maintainer:     tabemann@gmail.com
copyright:      2018 Travis Bemann
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/tabemann/porcupine

library
  exposed-modules:
                  Control.Concurrent.Porcupine.Node,
                  Control.Concurrent.Porcupine.Process
  other-modules:
                 Control.Concurrent.Porcupine.Private.Types
  hs-source-dirs:
                 src
  other-extensions:
                   OverloadedStrings,
                   OverloadedLists,
                   RecordWildCards,
                   DeriveGeneric,
                   MultiParamTypeClasses
  build-depends:
                base >=4.7 && <5,
                stm,
                async,
                bytestring,
                text,
                utf8-string,
                network,
                containers >=0.5.8,
                hashable,
                binary
  default-language: Haskell2010

--executable porcupine-exe
--  main-is: Main.hs
--  other-modules:
--      Paths_porcupine
--  hs-source-dirs:
--      app
--  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N
--  build-depends:
--      base >=4.7 && <5
--    , porcupine
--  default-language: Haskell2010
--
--test-suite porcupine-test
--  type: exitcode-stdio-1.0
--  main-is: Spec.hs
--  other-modules:
--      Paths_porcupine
--  hs-source-dirs:
--      test
--  ghc-options: -threaded -rtsopts -with-rtsopts=-N
--  build-depends:
--      base >=4.7 && <5
--    , porcupine
--  default-language: Haskell2010
