name:           porcupine
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/porcupine#readme>
homepage:       https://github.com/tabemann/porcupine#readme
bug-reports:    https://github.com/tabemann/porcupine/issues
author:         Travis Bemann
maintainer:     tabemann@gmail.com
copyright:      2018 Travis Bemann
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/tabemann/porcupine

library
  exposed-modules:
                  Control.Concurrent.Porcupine.Node,
                  Control.Concurrent.Porcupine.Process,
                  Control.Concurrent.Porcupine.GenericServer
  other-modules:
                 Control.Concurrent.Porcupine.Private.Types
  hs-source-dirs:
                 src
  other-extensions:
                   OverloadedStrings,
                   OverloadedLists,
                   RecordWildCards,
                   DeriveGeneric,
                   MultiParamTypeClasses,
                   GeneralizedNewtypeDeriving
  build-depends:
                base >=4.7 && <5,
                stm,
                async,
                bytestring,
                text,
                utf8-string,
                network,
                containers >=0.5.8,
                hashable,
                binary,
                transformers,
                random,
                unordered-containers
  default-language: Haskell2010

executable porcupine-test-simple0
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
                 test/simple0
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N
  other-extensions:
                   OverloadedStrings,
                   OverloadedLists,
                   RecordWildCards,
                   DeriveGeneric,
                   MultiParamTypeClasses,
                   GeneralizedNewtypeDeriving
  build-depends:
                base >=4.7 && <5,
                porcupine,
                stm,
                async,
                bytestring,
                text,
                utf8-string,
                network,
                containers >=0.5.8,
                hashable,
                binary,
                transformers,
                random,
                unordered-containers
  default-language: Haskell2010

executable porcupine-test-simple1
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
                 test/simple1
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N
  other-extensions:
                   OverloadedStrings,
                   OverloadedLists,
                   RecordWildCards,
                   DeriveGeneric,
                   MultiParamTypeClasses,
                   GeneralizedNewtypeDeriving
  build-depends:
                base >=4.7 && <5,
                porcupine,
                stm,
                async,
                bytestring,
                text,
                utf8-string,
                network,
                containers >=0.5.8,
                hashable,
                binary,
                transformers,
                random,
                unordered-containers
  default-language: Haskell2010

executable porcupine-test-simple2
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
                 test/simple2
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N
  other-extensions:
                   OverloadedStrings,
                   OverloadedLists,
                   RecordWildCards,
                   DeriveGeneric,
                   MultiParamTypeClasses,
                   GeneralizedNewtypeDeriving
  build-depends:
                base >=4.7 && <5,
                porcupine,
                stm,
                async,
                bytestring,
                text,
                utf8-string,
                network,
                containers >=0.5.8,
                hashable,
                binary,
                transformers,
                random,
                unordered-containers
  default-language: Haskell2010

executable porcupine-test-simple3
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
                 test/simple3
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N
  other-extensions:
                   OverloadedStrings,
                   OverloadedLists,
                   RecordWildCards,
                   DeriveGeneric,
                   MultiParamTypeClasses,
                   GeneralizedNewtypeDeriving
  build-depends:
                base >=4.7 && <5,
                porcupine,
                stm,
                async,
                bytestring,
                text,
                utf8-string,
                network,
                containers >=0.5.8,
                hashable,
                binary,
                transformers,
                random,
                unordered-containers
  default-language: Haskell2010

executable porcupine-test-ring0
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
                 test/ring0
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N
  other-extensions:
                   OverloadedStrings,
                   OverloadedLists,
                   RecordWildCards,
                   DeriveGeneric,
                   MultiParamTypeClasses,
                   GeneralizedNewtypeDeriving
  build-depends:
                base >=4.7 && <5,
                porcupine,
                stm,
                async,
                bytestring,
                text,
                utf8-string,
                network,
                containers >=0.5.8,
                hashable,
                binary,
                transformers,
                random,
                unordered-containers
  default-language: Haskell2010

executable porcupine-test-ring1
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
                 test/ring1
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N
  other-extensions:
                   OverloadedStrings,
                   OverloadedLists,
                   RecordWildCards,
                   DeriveGeneric,
                   MultiParamTypeClasses,
                   GeneralizedNewtypeDeriving
  build-depends:
                base >=4.7 && <5,
                porcupine,
                stm,
                async,
                bytestring,
                text,
                utf8-string,
                network,
                containers >=0.5.8,
                hashable,
                binary,
                transformers,
                random,
                unordered-containers
  default-language: Haskell2010
--
--test-suite porcupine-test
--  type: exitcode-stdio-1.0
--  main-is: Spec.hs
--  other-modules:
--      Paths_porcupine
--  hs-source-dirs:
--      test
--  ghc-options: -threaded -rtsopts -with-rtsopts=-N
--  build-depends:
--      base >=4.7 && <5
--    , porcupine
--  default-language: Haskell2010
